# turingrs_gui

./: Cargo.toml
src/: app.rs  lib.rs  main.rs  ui.rs
src/ui/: code.rs  component.rs  constant.rs  control.rs  graph.rs  ribbon.rs  turing.rs  utils.rs
src/ui/graph/: organic.rs  state.rs  transition.rs
