[package]
name = "turingrs_gui"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[dependencies]
eframe = "0.31.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui_flex = "0.3.0"
egui_infinite_scroll = "0.7.0"
rand = "0.9.0"
log = "0.4"
turingrs = { path="/home/adrien/dev/projets/turingrs"}
unicode-segmentation = "1.12.0"
itertools = "0.14.0"
rfd = "0.15.3"
poll-promise = {version="0.3.0", features=["web"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" 

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
